--- a/_templates/post.html
+++ b/_templates/post.html
@@ -12,6 +12,15 @@
 
 {% block content %}
     <div class="item">
+            <h1>{{ post.title }}</h1>
+            <div class="dateline">{{ post.date }}{% if post.tags %} <span>&raquo;</span> {% for tag in post.tags %}<a href="{{ get_url(tags[tag].url) }}">{{ tag }}</a>{% if not loop.last %}, {% endif %}{% endfor %}{% endif %}</div>
+        <div class="item-body">
+            {{ post.content }}
+        </div>
+    </div>
+
+    {#
+    <div class="item">
         <div class="item-header">
             <h1>{{ post.title }}</h1>
             <h2>{{ post.date }}{% if post.tags %} <span>&raquo;</span> {% for tag in post.tags %}<a href="{{ get_url(tags[tag].url) }}">{{ tag }}</a>{% if not loop.last %}, {% endif %}{% endfor %}{% endif %}</h2>
@@ -21,4 +30,5 @@
             {{ post.content }}
         </div>
     </div>
+    #}
 {% endblock %}
