--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     {% for post in posts %}
         <div class="item-header item-header-posts">
             <h1><a href={{ get_url(post.url) }}>{{ post.title }}</a></h1>
-            <h2>{{ post.date }}{% if post.tags %} <span>&raquo;</span> {% for tag in post.tags %}<a href="{{ get_url(tags[tag].url) }}">{{ tag }}</a>{% if not loop.last %}, {% endif %}{% endfor %}{% endif %}</h2>
+            <div class="dateline">{{ post.date }}{% if post.tags %} <span>&raquo;</span> {% for tag in post.tags %}<a href="{{ get_url(tags[tag].url) }}">{{ tag }}</a>{% if not loop.last %}, {% endif %}{% endfor %}{% endif %}</div>
+
+        <div class="item-body">
+            {{ post.content }}
+        </div>
         </div>
     {% endfor %}
 {% endblock %}
