Added jan meetup

--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -47,6 +47,7 @@
       -->
       <p></p>
       <p>
+        Hosted by <a href="http://e2enetworks.com/"> E2E Networks </a>
         Powered by <a href="http://mynt.mirroredwhite.com/">mynt</a> &mdash;
         Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
     </footer>
