--- a/about.html
+++ b/about.html
@@ -8,9 +8,7 @@ BangPypers, the Bangalore Python Usergroup is one of the largest and oldest Pyth
 </p>
 
 <p>
-The group maintains a <a href="http://mail.python.org/mailman/listinfo/bangpypers">mailing list</a> to discuss about various python-related topics.
-
-The group organizes monthly meetups regularly. Meetups usually happen on third saturday of every month. Look at our <a href="http://www.meetup.com/BangPypers/">Meetup.com page</a> for upcoming meetups.
+The group maintains a <a href="http://mail.python.org/mailman/listinfo/bangpypers">mailing list</a> to discuss about various python-related topics and organizes monthly meetups regularly. Meetups usually happen on third saturday of every month. Look at our <a href="http://www.meetup.com/BangPypers/">Meetup.com page</a> for upcoming meetups.
 </p>
 <p>
 <a href="http://mail.python.org/mailman/listinfo/bangpypers">Join our mailing list</a> | <a href="http://www.meetup.com/BangPypers/">Visit our meetup page</a>
