Added FaceBook Page

--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -40,6 +40,7 @@
         | <a href="http://mail.python.org/mailman/listinfo/bangpypers">Mailing List</a>
         | <a href="http://meetup.com/BangPypers/">Meetup Page</a>
         | <a href="http://python.org.in">Python India</a>
+        | <a href="https://www.facebook.com/bangpypers" target="_blank">FaceBook Page</a>
       </div>
       <section>
         <!--
