Added facebook icon in the header.

--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -21,8 +21,17 @@
     <div class="wrapper">
       <header>
 
+          <ul class="social">
+            <li class="facebook"><a title="Visit BangPypers on facebook.com" href="http://facebook.com/bangpypers"></a></li>
+            <!--
+            <li class="twitter"><a href="https://twitter.com/bangpypers"></a></li>
+            -->
+          </ul>
+
         <h1><a href="{{ get_url() }}">{{ site.title }}</a></h1>
         <p><a href="{{ get_url() }}" style="color: inherit;">{{ site.subtitle }}</a></p>
+
+
 
 
             {#
