--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -44,6 +44,7 @@
       <div class="menu">
         <a href="/">Home</a>
         | <a href="/about.html">About</a>
+        | <a href="/library.html">Library</a>
         | <a href="http://mail.python.org/mailman/listinfo/bangpypers">Mailing List</a>
         | <a href="http://meetup.com/BangPypers/">Meetup Page</a>
         | <a href="http://python.org.in">Python India</a>
