Make sure all link heading are displayed in same line

--- a/_templates/layout.html
+++ b/_templates/layout.html
@@ -46,9 +46,8 @@
         | <a href="/about.html">About</a>
         | <a href="/library.html">Library</a>
         | <a href="http://mail.python.org/mailman/listinfo/bangpypers">Mailing List</a>
-        | <a href="http://meetup.com/BangPypers/">Meetup Page</a>
-        | <a href="http://python.org.in">Python India</a>
-        | <a href="https://www.facebook.com/bangpypers" target="_blank">FaceBook Page</a>
+        | <a href="http://meetup.com/BangPypers/">Meetup </a>
+        | <a href="https://www.facebook.com/bangpypers" target="_blank">FaceBook</a>
       </div>
       <section>
         <!--
