--- a/library.html
+++ b/library.html
@@ -10,11 +10,11 @@
                 Two Scoops of Django by Daniel Greenfeld and Audrey Roy</a></li>
         <li><a href="https://gumroad.com/driscollis">Python 101 by Michael Driscoll</a></li>
         <li><a href="http://shop.oreilly.com/product/0636920032441.do">
-                Python for Finance by O'reilly</a><li>
+                Python for Finance by O'reilly</a></li>
         <li><a href="http://shop.oreilly.com/product/0636920023784.do">
-                Python for Data Analysis by O'reilly</a><li>
+                Python for Data Analysis by O'reilly</a></li>
         <li><a href="http://shop.oreilly.com/product/0636920033400.do">
-                Data Science from Scratch by O'reilly</a><li>
+                Data Science from Scratch by O'reilly</a></li>
     </ul>
 
     We follow simple policy to circulate these books. Come to the meetup, ask the organizer about the book, borrow the book and return during next meetup. You need to provide your contact number and email to organizer.
