--- a/library.html
+++ b/library.html
@@ -17,7 +17,7 @@
                 Data Science from Scratch by O'reilly</a></li>
     </ul>
 
-    We follow simple policy to circulate these books. Come to the meetup, ask the organizer about the book, borrow the book and return during next meetup. You need to provide your contact number and email to organizer.
+    We follow simple policy to circulate these books. Come to the meetup, ask the organizer about the book, borrow the book and return in next meetup. You need to provide your contact number and email to organizer.
 
     You can also donate books to us :-)
 </p>
